Completed documentation of part two

--- a/etl/doc/doc.tex
+++ b/etl/doc/doc.tex
@@ -84,7 +84,7 @@
 به کمک کتابخانه 
 \lstinline|argparse|
 یک رابط 
-\lr{CLR}
+\lr{CLI}
 طراحی شده است که میتوان صفحه 
 \lr{help}
 را به کمک دستور
@@ -105,5 +105,137 @@
 \end{latin}
 
 \section*{ساختار کد}
-
+کلاس های 
+\lr{DAG}
+و
+\lr{LinkedList}
+پیاده سازی ساختمان داده های مورد نیاز هستند. همچنین کلاس 
+\lr{DAG}
+شامل متدی برای تبدیل گراف به 
+\lr{topological\_order}
+است. نام کلاس 
+\lr{DAG}
+بهتر بود 
+\lr{DirectedGraph}
+میبود زیرا بررسی وجود دور در گراف در آن
+\footnote{\lr{topological\_order}}
+ متد (در واقع \lr{property}) انجام میشود ولی در کد ها انتظار می رود استفاده هایی که از 
+\lr{DAG}
+می شود در واقع گراف جهت داری بدون دور باشند. البته متد 
+\lr{topological\_order}
+در صورت مشاهده دور آن را اعلام کرده و برنامه با نمایش پیامی مبنی بر 
+\lr{cyclic dependencies between tables}
+ به کاربر خاتمه می یابد. در بخش باگ ها درباره این موضوع توضیح داده میشود. کلاس 
+ \lr{DB}
+ یک 
+ \lr{wrapper}
+ برای استفاده از درایور 
+ \lr{psycopg2}
+ است. البته این موضوع در کلاس 
+ \lr{pipeline}
+ تا حدودی نقض شده است زیرا انجام 
+ \lr{wrapping}
+ در این کلاس به دلیل استفاده از
+ \lr{named cursor}
+ ها یا 
+ \lr{server-side cursor}
+ موجب پیچیدگی مضاعف میشد. علت استفاده از 
+ \lr{cursor}
+ سمت سرور دیتابیس وجود کوئری برای دریافت حجم بالایی از رکورد ها است. کلاس 
+ \lr{pipeline}
+ نیز عملیات اصلی را به کمک کلاس های بالا انجام می دهد. مانند اتصال به پایگاه داده ها، بررسی شرایط لازم برای انجام فرآیند
+ \lr{ETL}
+ (در طراحی ما) ساخت گراف 
+ \lr{DAG}
+ و
+ \lr{topological order}
+ به کمک کوئری ها از جداول اسکیمای 
+ \lr{pg\_catalog} 
+ و در نهایت بستن کانکشن به دیتابیس ها.
+\section*{منطق گراف ها}
+گراف 
+\lr{DAG}
+ما براساس کلید های خارجی 
+\footnote{\lr{foreign key}}
+بین جداول است. یعنی در ابتدا رئوس گراف جداول در اسکیمای مد نظر خواهند بود. سپس یالی جهت دار از جدول 
+ $A$
+ به جدول
+ $B$
+ در گراف قرار دارد اگر 
+ $A$
+ حداقل یک کلید خارجی به کلید اصلی
+ \footnote{\lr{primary key}}
+  جدول 
+ $B$ 
+ داشته باشد. (در بخش شرایط خواهیم گفت که اجازه وجود کلید خارجی به یک خصیصه یکتا
+ \footnote{\lr{unique attribute}}
+  نه اصلی را نمی دهیم)
+  در صورتی که این 
+  \lr{dependency graph}
+  یک 
+  \lr{DAG}
+  باشد، یعنی هیچ وابستگی دوری
+  \footnote{\lr{cyclic dependency}}
+   بین جداول وجود ندارد. یعنی میتوان عملیات های 
+   \lr{delete}
+   را در ترتیب
+   \lr{topological order}
+   عملیات های 
+    \lr{insert}
+    و
+    \lr{update}
+    در عکس این ترتیب اجرا شوند. زیرا برای \lr{insert} نیاز داریم تا همه کلید های خراجی معتبر باشند. پس از جدولی شروع به کار میکنیم که هیچ کلید خارجی نداشته باشد. برای حذف نیز نیاز داریم تا هیچ جدولی به رکورد مد نظر کلید خارجی نداشته باشد. 
+    
+    اما کدامیک بر دیگری اولویت دارند؟ میخواهیم نشان دهیم که 
+    \lr{insert}
+    و
+    \lr{update}
+    ها را میتوان  قبل از \lr{delete} ها انجام داد همچنین ترتیب بین \lr{insert} و \lr{update} ها مهم نخواهد بود. (یعنی در \textbf{یک} رابطه مهم نیست که اول رکورد $x$ را اضافه کنیم یا $y$ را) فرض کنید برای \lr{insert} یا \lr{update} رکورد $a$ نیاز به حذف رکورد $b$ باشد. برای اضافه کردن $a$ باید کلید های خارجی آن در دیتابیس موجود باشند. چون کلید خارجی باید به کلید اصلی اشاره کند (جز شرایط ما)، وابستگی های رکورد $a$ باید یا در دیتابیس موجود باشند یا اضافه شوند، زیرا در عملیات \lr{update} کلید اصلی تغییر نمیکند‌ (طبق فرض)‌ (اگر کلید خارجی به خصیصه های یکتا مجاز بود چنین گزاره‌ای غلط بود. زیرا در آپدیت امکان تغییر آنها وجود دارد.) اولین عملیات حذف در گراف وابستگی های رکورد $a$ را در نظر بگیرید. پس یک 
+    \lr{insert}
+    مستقیما نیازمند یک حذف بوده است اما وابستگی یا وجود کلید خارجی است که با حذف ارضا نمیشود یا وجود رکوردی با کلید اصلی که امکان 
+    \lr{duplicate}
+    شدن آن وجود ندارد. اما در صورتی که بخواهیم رکوردی را اضافه کنیم که کلید اصلی آن در جدول موجود است و درنتیجه نیاز به حذف آن باشد،‌ این عملیات 
+    \lr{insert}
+    نخواهد بود بلکه \lr{update} است. به سادگی می توان دید که با پیمایش برعکس 
+    \lr{topological order}
+    و انجام عملیات های \lr{insert} و \lr{update} با هر ترتیبی در هر جدول به دلیل شرایط نامبرده (عدم تغییر کلید اصلی در آپدیت و نبودن کلید خارجی به خصیصه یکتا) دیتابیس را در حالت 
+    \lr{stable}
+    قرار میدهد. سپس با پیمایش 
+    \lr{topological order}
+    و انجام \lr{delete} ها فرآیند 
+    \lr{ETL}
+    خاتمه می یابد.
+    
+\section*{شرایط لازم برای انجام فرآیند \lr{ETL}}
+\begin{enumerate}
+	\item 
+	\textbf{
+		نداشتن \lr{unique constraints} و درنتیجه نبودن کلید خارجی به آنها
+	}:
+	به دو دلیل این شرط نیاز است. تصور کنید کلید خارجی (در رابطه $A$) به یک خصیصه یکتا (در رابطه $B$) باشد. با انجام آپدیت ها در جدول $B$ دیگر نمیتوان مطمئن بود این کلید حذف نشود و در نتیجه امکان تجاوز 
+	\lr{integrity}
+	وجود دارد. همچنین وجود یک خصیصه یکتا موجب می شود تا عملیات های حذف و اضافه و آپدیت در یک رابطه تحت ترتیبی انجام شوند. زیرا امکان اضافه رکورد با مقدار تکراری در خصیصه یکتا مگر با حذف یا آپدیت رکورد پیشین وجود ندارد.
+	\item
+	\textbf{
+	نداشتن \lr{self reference}
+	}:
+وجود چنین کلید خارجی نه تنها موجب ایجاد دور در گراف جهت دور میکند بلکه باعث میشود ترتیب 
+	\lr{insert}
+ها در رابطه مدنظر به طور خاص انجام شود. تصور کنید نیاز به اضافه کردن رکوردی باشد که هنوز کلید اصلی متناظر با کلید خارجی آن وجود نداشته باشد. البته امکان حل این موضوع در کد فعیل وجود دارد. تابع \lr{topological order} باید این دور ها رو به صورت آرایه‌ای از صفر و یک ها که یک معادل وجود خود-ارجاعی در آن جدول است در اختیار 
+	\lr{pipeline}
+قرار دهد. سپس خط لوله با تشکیل یک 
+	\lr{DAG}
+میان عملیات های 
+	\lr{insert}
+و کلید های اصلی مورد نیاز آنها
+	\footnote{
+	یک گراف جهت دار با رئوس کلید های اصلی که وجود هر کلید اصلی موجب انجام آپدیت یا اضافه شدن کلید اصلی دیگر میشود (یال های خروجی) و کلید های اصلی دیگری برای آپدیت یا اضافه کردن این کلید مورد نیاز هستند (یال های ورودی)
+	}
+ میتواند در هر رابطه جداگانه این قضیه رو مدیریت کند.
+	\item
+	\textbf{
+		نداشتن وابستگی دوری و \lr{DAG} بودن گراف
+	}:
+دلیل آن واضح است ولی راه حل آن مانند حالت بالا است. (گرافی از کلید های اصلی اما با یال هایی میان جدول ها)
+\end{enumerate}
 \end{document}
